fix home button being too small and main menu layout

--- a/css/classes/general.less
+++ b/css/classes/general.less
@@ -30,7 +30,7 @@
   }
 }
 
-#main-menu.options {
+#main-menu .options {
   margin-top: 15px;
   font-size: 1rem;
   text-align: center;
@@ -99,10 +99,12 @@
 }
 
 #bar-menu .home {
-  display: block;
+  a {
+    display: block;
+  }
+
   background-color: var(--accent-color);
 
-  
   font-size: 1rem;
 
   padding: 10px 1rem;
